# hidden_watermark

./: AGENTS.md  Cargo.toml  README.md  package-lock.json
.claude/: settings.local.json
archive/prototype/: align.py  detect.py  embed.py  requirements.txt  test.py  utils.py
docs/: format_aware_watermark_strategy.md  implementation_and_roadmap.md
openspec/: config.yaml
openspec/changes/archive/2026-05-08-robust-screen-cam/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-fix-bch-and-polish/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-fix-robustness-and-performance/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-fix-rotation-accuracy/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-image-robustness-tests/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-integrate-nonblind-watermark/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-nonblind-watermark-prototype/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-optimize-watermark/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-polish-and-optimize/: .openspec.yaml  design.md  proposal.md  tasks.md
scripts/: preprocess.py  test_robustness.sh
src/: align.rs  bch.rs  common.rs  frame.rs  lib.rs  main.rs  midfreq.rs
src/backend/: frequency_v2.rs  jpeg_dct.rs  mod.rs
tests/: robust.rs
(+28 files in other folders)
