[package]
name = "hidden_watermark"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
crc32fast = "1.5"
image = { version = "0.25.10", default-features = true }
imageproc = "0.25.0"
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.23"
thiserror = "2.0"

[features]
default = []
opencv = []

[dev-dependencies]
tempfile = "3.23"
