[package]
name = "hidden_watermark"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
fastrand = "2.4.1"
image = { version = "0.25.10", default-features = true, features = ["jpeg"] }
imageproc = "0.25"
rayon = "1.7"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.23"
